--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -1,25 +1,10 @@
-.login{
-    height: 100vh;
+.login{        
     background: linear-gradient(to right, rgb(83, 105, 118), rgb(41, 46, 73));
 }
 
-.outer {
-    position:absolute;
-    top:0;
-    left:0;
-    /*width:100%;
-    height:100%;*/
-}
 
-.table-container {
-    height:100%;
-    width:100%;
-    display:table;
-}
-
-.table-cell {
-    vertical-align:middle;
-    height:100%;
-    display:table-cell;
-    border:1px solid #000;
+.card-login{
+    background-color: white;
+    width: 350px;
+    height: 350px;
 }
