--- a/src/views/Login/Login.css
+++ b/src/views/Login/Login.css
@@ -2,9 +2,8 @@
     background: linear-gradient(to right, rgb(83, 105, 118), rgb(41, 46, 73));
 }
 
-
 .card-login{
     background-color: white;
     width: 350px;
-    height: 350px;
+    min-height: 350px;
 }
